--- a/scanlibrary/src/main/res/layout/result_layout.xml
+++ b/scanlibrary/src/main/res/layout/result_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/black"
+    android:background="@color/colorAppBack"
     android:orientation="vertical">
 
     <LinearLayout
@@ -64,38 +64,56 @@
 
     <LinearLayout
         android:id="@+id/topBar2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/backButton"
-        android:layout_marginTop="50dp"
-        android:orientation="vertical">
+        android:layout_above="@id/topBar"
+        android:layout_marginBottom="8dp"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/rotate_left"
-            android:layout_width="50dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:background="@android:color/transparent"
             android:drawableTop="@drawable/ic_rotate_left"
+            android:text="Left Rotate"
             android:textAllCaps="false"
             android:textColor="@android:color/white" />
 
         <Button
             android:id="@+id/rotate_right"
-            android:layout_width="50dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:background="@android:color/transparent"
             android:drawableTop="@drawable/ic_rotate_right"
             android:singleLine="true"
+            android:text="Right Rotate"
             android:textAllCaps="false"
             android:textColor="@android:color/white" />
 
         <Button
             android:id="@+id/mirror"
-            android:layout_width="50dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:background="@android:color/transparent"
             android:drawableTop="@drawable/ic_mirror"
             android:singleLine="true"
+            android:text="Mirror"
+            android:textAllCaps="false"
+            android:textColor="@android:color/white" />
+
+        <Button
+            android:id="@+id/brightnessButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@android:color/transparent"
+            android:drawableTop="@drawable/ic_brightness"
+            android:singleLine="true"
+            android:text="Brightness"
             android:textAllCaps="false"
             android:textColor="@android:color/white" />
 
@@ -128,7 +146,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/topBar"
+        android:layout_above="@id/topBar2"
         android:layout_below="@id/doneButton"
         android:layout_gravity="center"
         android:layout_margin="@dimen/scanPadding">
@@ -141,5 +159,43 @@
             android:layout_margin="@dimen/scanPadding" />
     </FrameLayout>
 
+    <LinearLayout
+        android:id="@+id/brightnessPopup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/topBar2"
+        android:orientation="vertical"
+        android:padding="20dp"
+        android:visibility="gone">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Brightness"
+            android:textColor="@color/colorWhite" />
+
+        <SeekBar
+            android:id="@+id/seek_brightness"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:progressTint="@color/colorWhite"
+            android:thumbTint="@color/colorPurple" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Sharpness"
+            android:textColor="@color/colorWhite" />
+
+        <SeekBar
+            android:id="@+id/seek_sharpness"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:progressTint="@color/colorWhite"
+            android:thumbTint="@color/colorPurple" />
+
+    </LinearLayout>
 
 </RelativeLayout>
