--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,8 +32,8 @@
     </style>
 
     <style name="MenuText">
-        <item name="fontFamily">@font/ubuntu_light</item>
-        <item name="android:textSize">20sp</item>
+        <item name="fontFamily">@font/ubuntu_medium</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/colorWhite</item>
         <item name="android:layout_height">wrap_content</item>
