--- a/scanlibrary/src/main/res/drawable/circle.xml
+++ b/scanlibrary/src/main/res/drawable/circle.xml
@@ -2,13 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="@color/polygonViewCircleBackground" />
+    <solid android:color="@color/colorWhite" />
 
     <size
         android:width="@dimen/polygonViewCircleWidth"
         android:height="@dimen/polygonViewCircleWidth" />
 
-    <stroke
-        android:width="@dimen/polygonViewStrokeWidth"
-        android:color="@color/polygonViewCircleStrokeColor"></stroke>
 </shape>
