--- a/scanlibrary/src/main/res/layout/result_layout.xml
+++ b/scanlibrary/src/main/res/layout/result_layout.xml
@@ -193,6 +193,7 @@
             android:id="@+id/seek_sharpness"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:max="5"
             android:progressTint="@color/colorWhite"
             android:thumbTint="@color/colorPurple" />
 
