--- a/scanlibrary/src/main/res/values/colors.xml
+++ b/scanlibrary/src/main/res/values/colors.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="blue">#ff59a9ff</color>
+    <color name="blue">#ffffff</color>
     <color name="orange">#ffff900d</color>
     <color name="bottom_background_color">#ffc4c2bc</color>
 
-    <color name="polygonViewCircleStrokeColor">#ff59a9ff</color>
+    <color name="polygonViewCircleStrokeColor">#ffffff</color>
     <color name="polygonViewCircleBackground">#90e5f8ff</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
     <color name="colorPurple">#7C4DFF</color>
     <color name="colorAppBack">#121212</color>
+    <color name="colorAccent">#280A50</color>
+    <color name="colorAccentLight">#3D1472</color>
 </resources>
