commit for pdf list ui

--- a/app/src/main/res/layout/fragment_doc_list.xml
+++ b/app/src/main/res/layout/fragment_doc_list.xml
@@ -12,11 +12,11 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:fontFamily="@font/ubuntu_medium"
+        android:text="@string/scanned_images"
         android:textColor="@color/colorWhite"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Scanned Images" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_doc_list"
@@ -46,6 +46,7 @@
             android:id="@+id/iv_no_data"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:scaleType="fitXY"
             android:src="@drawable/ic_empty"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
