--- a/app/src/main/res/layout/fragment_pdf_list.xml
+++ b/app/src/main/res/layout/fragment_pdf_list.xml
@@ -12,11 +12,11 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:fontFamily="@font/ubuntu_medium"
+        android:text="@string/scanned_pdf"
         android:textColor="@color/colorWhite"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Scanned Images" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_doc_list"
@@ -25,12 +25,11 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_list_name"
-        app:spanCount="3"
-        tools:listitem="@layout/item_doc" />
+        tools:listitem="@layout/item_pdf" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_no_data"
