--- a/scanlibrary/src/main/res/values/colors.xml
+++ b/scanlibrary/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="blue">#ffffff</color>
+    <color name="blue">#18FFFF</color>
     <color name="orange">#ffff900d</color>
     <color name="bottom_background_color">#ffc4c2bc</color>
 
