--- a/app/src/main/res/layout/fragment_doc_detail.xml
+++ b/app/src/main/res/layout/fragment_doc_detail.xml
@@ -54,10 +54,10 @@
         app:layout_constraintEnd_toStartOf="@+id/btn_share"
         app:layout_constraintTop_toTopOf="@+id/btn_share" />
 
-    <androidx.appcompat.widget.AppCompatImageView
+    <com.ortiz.touchview.TouchImageView
         android:id="@+id/iv_doc_detail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="@id/gl_bottom"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
