--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -67,22 +67,10 @@
         <action
             android:id="@+id/action_docListFragment_to_docDetailFragment"
             app:destination="@id/docDetailFragment" />
-        <argument
-            android:name="docType"
-            android:defaultValue=""
-            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/pdfListFragment"
         android:name="com.m.cammstrind.ui.pdfList.PdfListFragment"
         android:label="PdfListFragment"
-        tools:layout="@layout/fragment_pdf_list">
-        <argument
-            android:name="docType"
-            android:defaultValue=""
-            app:argType="string" />
-        <action
-            android:id="@+id/action_pdfListFragment_to_docDetailFragment"
-            app:destination="@id/docDetailFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_pdf_list" />
 </navigation>
