--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,4 +41,12 @@
         <item name="android:layout_marginStart">10dp</item>
     </style>
 
+    <style name="ItemText">
+        <item name="fontFamily">@font/ubuntu_light</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+    </style>
+
 </resources>
