--- a/scanlibrary/src/main/res/drawable/circle.xml
+++ b/scanlibrary/src/main/res/drawable/circle.xml
@@ -7,5 +7,8 @@
     <size
         android:width="@dimen/polygonViewCircleWidth"
         android:height="@dimen/polygonViewCircleWidth" />
+    <stroke
+        android:width="1dp"
+        android:color="@color/blue" />
 
 </shape>
