--- a/scanlibrary/src/main/res/layout/pick_image_fragment.xml
+++ b/scanlibrary/src/main/res/layout/pick_image_fragment.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="#ffc4c2bc"
+        android:visibility="invisible"
         android:orientation="horizontal"
         android:padding="15dp">
 
