--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
@@ -20,7 +19,7 @@
         android:id="@+id/tv_app"
         style="@style/ScreenTitle"
         android:layout_marginStart="10dp"
-        android:text="@string/cammaster"
+        android:text="@string/cam_master"
         app:layout_constraintBottom_toBottomOf="@+id/iv_logo"
         app:layout_constraintStart_toEndOf="@+id/iv_logo"
         app:layout_constraintTop_toTopOf="@+id/iv_logo" />
@@ -92,9 +91,10 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/btn_ocr"
         android:layout_width="0dp"
-        android:layout_height="170dp"
+        android:layout_height="150dp"
         android:layout_marginTop="20dp"
-        android:background="@color/colorBlack"
+        android:background="@drawable/background_item"
+        android:elevation="10dp"
         app:layout_constraintEnd_toEndOf="@id/gl_end"
         app:layout_constraintStart_toStartOf="@+id/gl_start"
         app:layout_constraintTop_toBottomOf="@+id/btn_browse_images">
@@ -116,44 +116,11 @@
             android:fontFamily="@font/ubuntu_light"
             android:text="@string/text_recognition"
             android:textColor="@color/colorWhite"
-            android:textSize="28sp"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/btn_barcode"
-        android:layout_width="0dp"
-        android:layout_height="170dp"
-        android:layout_marginTop="20dp"
-        android:background="@color/colorBlack"
-        app:layout_constraintEnd_toEndOf="@id/gl_end"
-        app:layout_constraintStart_toStartOf="@+id/gl_start"
-        app:layout_constraintTop_toBottomOf="@+id/btn_ocr">
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/iv_barcode"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:src="@drawable/ic_barcode"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/tv_barcode"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/tv_barcode"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/ubuntu_light"
-            android:text="@string/barcode_scanner"
-            android:textColor="@color/colorWhite"
-            android:textSize="28sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
@@ -184,8 +151,8 @@
         android:drawableStart="@drawable/ic_original"
         android:fontFamily="@font/ubuntu"
         android:padding="10dp"
-        android:paddingStart="40dp"
-        android:paddingEnd="40dp"
+        android:paddingStart="50dp"
+        android:paddingEnd="50dp"
         android:text="@string/files"
         android:textColor="@color/colorWhite"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -196,8 +163,9 @@
         android:id="@+id/cl_menu"
         android:layout_width="220dp"
         android:layout_height="match_parent"
-        android:background="@color/colorBlack"
+        android:background="@color/colorPrimary"
         android:clickable="true"
+        android:elevation="11dp"
         android:focusable="true"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -205,28 +173,28 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/tv_menuOCR"
+            android:id="@+id/tv_menu_rate_us"
             style="@style/MenuText"
-            android:layout_marginTop="80dp"
-            android:text="@string/ocr_text_detection"
+            android:layout_marginTop="100dp"
+            android:text="@string/rate_us"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tv_menuBarcode"
+            android:id="@+id/tv_menu_share_app"
             style="@style/MenuText"
             android:layout_marginTop="20dp"
-            android:text="@string/barcode_scanning"
+            android:text="@string/share_cam_master"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_menuOCR" />
+            app:layout_constraintTop_toBottomOf="@id/tv_menu_rate_us" />
 
         <TextView
-            android:id="@+id/tv_menuAbout"
+            android:id="@+id/tv_menu_about"
             style="@style/MenuText"
             android:layout_marginTop="20dp"
             android:text="@string/about"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_menuBarcode" />
+            app:layout_constraintTop_toBottomOf="@id/tv_menu_share_app" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -235,6 +203,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:elevation="12dp"
         android:src="@drawable/ic_menu"
         app:layout_constraintEnd_toEndOf="@id/gl_end"
         app:layout_constraintTop_toTopOf="parent" />
